<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="good_morning_message">Good Morning,</string>
    <string name="out_of_out">%s/%s</string>
    <string name="step">Steps</string>
    <string name="water_glass">Water Glass</string>
    <string name="today_s_excercise">Today\'s Excercise</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_here_sign_up">New here? Sign UP</string>
    <string name="reset_password">Reset Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="step_counter">Step Counter</string>
    <string name="steps">Steps : %s</string>
    <string name="distance">Distance : %s KM</string>
    <string name="time">Time : %s Second</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
</resources>