<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_counter"
        android:gravity="center"
        android:layout_marginTop="20sp"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15sp"
        android:orientation="horizontal"
        android:layout_marginTop="40sp"
        android:layout_margin="20sp">
        <ImageView
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:src="@drawable/steps"/>
        <TextView
            android:id="@+id/steps_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps"
            android:layout_marginStart="20sp"
            android:textSize="40sp"
            android:layout_gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15sp"
        android:orientation="horizontal"
        android:layout_margin="20sp">
        <ImageView
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:src="@drawable/distance"/>
        <TextView
            android:id="@+id/distance_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:layout_marginStart="20sp"
            android:textSize="40sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15sp"
        android:orientation="horizontal"
        android:layout_margin="20sp">
        <ImageView
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:src="@drawable/clock"/>
        <TextView
            android:id="@+id/time_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:layout_marginStart="20sp"
            android:textSize="40sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pause"
        android:layout_gravity="center"/>
</LinearLayout>
</layout>