<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/dashboard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.469"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.005" />

        <View
            android:id="@+id/line_view"
            android:layout_width="match_parent"
            android:layout_height="3sp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dashboard_button"
            app:layout_constraintVertical_bias="0.011" />

        <LinearLayout
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="72dp"
            android:layout_marginRight="20sp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_view"
            app:layout_constraintVertical_bias="0">

            <ImageView
                android:id="@+id/profile_button"
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:src="@drawable/person"
                android:contentDescription="TODO" />

            <LinearLayout
                android:id="@+id/gm_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/good_morning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:fontFamily="cursive"
                    android:text="@string/good_morning_message"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:fontFamily="cursive"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/setting_button"
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:src="@drawable/settings" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/circular_10_counter_white_blue"
            android:paddingBottom="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_title"
            app:layout_constraintVertical_bias="0.03">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white_blue"
                android:paddingLeft="20sp"
                android:paddingTop="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/out_of_out"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="@string/water_glass"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:paddingBottom="10sp"
                    android:text="@string/out_of_out"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@id/recent_all_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circular_background"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info"
            app:layout_constraintVertical_bias="0.054">

            <TextView
                android:id="@+id/recent_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="20sp"
                android:paddingRight="15sp"
                android:background="@drawable/circular_background"
                android:text="Recent"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/all_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circular_background"
                android:gravity="center"
                android:paddingLeft="15sp"
                android:paddingRight="20sp"
                android:text="All"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recent_all_layout"
            app:layout_constraintVertical_bias="0.087">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/exercise_record_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

        <ImageView
            android:id="@+id/running_button"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/run"
            android:background="@drawable/rectangle_white_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.91" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>